ANTLR-AST/src/B/BParser.java
// Generated from ./B.g4 by ANTLR 4.9
package B;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NUMBERTYPE=1, BOOLTYPE=2, BOOLLITERAL=3, NUMLITERAL=4, ENDF=5, RETURN=6, 
		IF=7, PRINTCHAR=8, LPAREN=9, RPAREN=10, LCURLY=11, RCURLY=12, LOGOR=13, 
		LOGAND=14, LOGEQ=15, LOGNOTEQ=16, LOGLESS=17, LOGGREATER=18, LOGLESSOREQ=19, 
		LOGGREATEROREQ=20, NEGATE=21, POW=22, COMMA=23, ASSIGN=24, PLUS=25, MINUS=26, 
		MULTIPLY=27, DIVIDE=28, SEMICOLON=29, WS=30, NEWLINE=31, ID=32;
	public static final int
		RULE_prog = 0, RULE_code = 1, RULE_funcdef = 2, RULE_type = 3, RULE_funcdefparams = 4, 
		RULE_funcdefmoreparams = 5, RULE_funcdefparam = 6, RULE_stmts = 7, RULE_stmt = 8, 
		RULE_expr = 9, RULE_logexpr = 10, RULE_logexpr2 = 11, RULE_logexpr3 = 12, 
		RULE_mathexpr = 13, RULE_mathexpr2 = 14, RULE_mathexpr3 = 15, RULE_logexpr4 = 16, 
		RULE_val = 17, RULE_funccall = 18, RULE_exprparams = 19, RULE_exprmoreparams = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "code", "funcdef", "type", "funcdefparams", "funcdefmoreparams", 
			"funcdefparam", "stmts", "stmt", "expr", "logexpr", "logexpr2", "logexpr3", 
			"mathexpr", "mathexpr2", "mathexpr3", "logexpr4", "val", "funccall", 
			"exprparams", "exprmoreparams"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'number'", "'bool'", null, null, "'endf'", "'return'", "'if'", 
			"'?'", "'('", "')'", "'{'", "'}'", "'||'", "'&&'", "'=='", "'!='", "'<'", 
			"'>'", "'<='", "'>='", "'!'", "'^'", "','", "'='", "'+'", "'-'", "'*'", 
			"'/'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NUMBERTYPE", "BOOLTYPE", "BOOLLITERAL", "NUMLITERAL", "ENDF", 
			"RETURN", "IF", "PRINTCHAR", "LPAREN", "RPAREN", "LCURLY", "RCURLY", 
			"LOGOR", "LOGAND", "LOGEQ", "LOGNOTEQ", "LOGLESS", "LOGGREATER", "LOGLESSOREQ", 
			"LOGGREATEROREQ", "NEGATE", "POW", "COMMA", "ASSIGN", "PLUS", "MINUS", 
			"MULTIPLY", "DIVIDE", "SEMICOLON", "WS", "NEWLINE", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "B.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public CodeContext code() {
			return getRuleContext(CodeContext.class,0);
		}
		public TerminalNode EOF() { return getToken(BParser.EOF, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BVisitor ) return ((BVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			code();
			setState(43);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeContext extends ParserRuleContext {
		public CodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code; }
	 
		public CodeContext() { }
		public void copyFrom(CodeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CodeEmptyContext extends CodeContext {
		public CodeEmptyContext(CodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).enterCodeEmpty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).exitCodeEmpty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BVisitor ) return ((BVisitor<? extends T>)visitor).visitCodeEmpty(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CodeStmtContext extends CodeContext {
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public CodeContext code() {
			return getRuleContext(CodeContext.class,0);
		}
		public CodeStmtContext(CodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).enterCodeStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).exitCodeStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BVisitor ) return ((BVisitor<? extends T>)visitor).visitCodeStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CodeFuncdefContext extends CodeContext {
		public FuncdefContext funcdef() {
			return getRuleContext(FuncdefContext.class,0);
		}
		public CodeContext code() {
			return getRuleContext(CodeContext.class,0);
		}
		public CodeFuncdefContext(CodeContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).enterCodeFuncdef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).exitCodeFuncdef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BVisitor ) return ((BVisitor<? extends T>)visitor).visitCodeFuncdef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodeContext code() throws RecognitionException {
		CodeContext _localctx = new CodeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_code);
		try {
			setState(52);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMBERTYPE:
			case BOOLTYPE:
				_localctx = new CodeFuncdefContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(45);
				funcdef();
				setState(46);
				code();
				}
				break;
			case BOOLLITERAL:
			case NUMLITERAL:
			case LPAREN:
			case NEGATE:
			case ID:
				_localctx = new CodeStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(48);
				stmt();
				setState(49);
				code();
				}
				break;
			case EOF:
				_localctx = new CodeEmptyContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncdefContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(BParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(BParser.LPAREN, 0); }
		public FuncdefparamsContext funcdefparams() {
			return getRuleContext(FuncdefparamsContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(BParser.RPAREN, 0); }
		public TerminalNode ASSIGN() { return getToken(BParser.ASSIGN, 0); }
		public StmtsContext stmts() {
			return getRuleContext(StmtsContext.class,0);
		}
		public TerminalNode RETURN() { return getToken(BParser.RETURN, 0); }
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public TerminalNode ENDF() { return getToken(BParser.ENDF, 0); }
		public FuncdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcdef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).enterFuncdef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).exitFuncdef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BVisitor ) return ((BVisitor<? extends T>)visitor).visitFuncdef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncdefContext funcdef() throws RecognitionException {
		FuncdefContext _localctx = new FuncdefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_funcdef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			type();
			setState(55);
			match(ID);
			setState(56);
			match(LPAREN);
			setState(57);
			funcdefparams();
			setState(58);
			match(RPAREN);
			setState(59);
			match(ASSIGN);
			setState(60);
			stmts();
			setState(61);
			match(RETURN);
			setState(62);
			stmt();
			setState(63);
			match(ENDF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode NUMBERTYPE() { return getToken(BParser.NUMBERTYPE, 0); }
		public TerminalNode BOOLTYPE() { return getToken(BParser.BOOLTYPE, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BVisitor ) return ((BVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			_la = _input.LA(1);
			if ( !(_la==NUMBERTYPE || _la==BOOLTYPE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncdefparamsContext extends ParserRuleContext {
		public FuncdefparamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcdefparams; }
	 
		public FuncdefparamsContext() { }
		public void copyFrom(FuncdefparamsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FuncdefparamsEmptyContext extends FuncdefparamsContext {
		public FuncdefparamsEmptyContext(FuncdefparamsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).enterFuncdefparamsEmpty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).exitFuncdefparamsEmpty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BVisitor ) return ((BVisitor<? extends T>)visitor).visitFuncdefparamsEmpty(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FuncdefparamsNotEmptyContext extends FuncdefparamsContext {
		public FuncdefparamContext funcdefparam() {
			return getRuleContext(FuncdefparamContext.class,0);
		}
		public FuncdefmoreparamsContext funcdefmoreparams() {
			return getRuleContext(FuncdefmoreparamsContext.class,0);
		}
		public FuncdefparamsNotEmptyContext(FuncdefparamsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).enterFuncdefparamsNotEmpty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).exitFuncdefparamsNotEmpty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BVisitor ) return ((BVisitor<? extends T>)visitor).visitFuncdefparamsNotEmpty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncdefparamsContext funcdefparams() throws RecognitionException {
		FuncdefparamsContext _localctx = new FuncdefparamsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_funcdefparams);
		try {
			setState(71);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMBERTYPE:
			case BOOLTYPE:
				_localctx = new FuncdefparamsNotEmptyContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				funcdefparam();
				setState(68);
				funcdefmoreparams();
				}
				break;
			case RPAREN:
				_localctx = new FuncdefparamsEmptyContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncdefmoreparamsContext extends ParserRuleContext {
		public FuncdefmoreparamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcdefmoreparams; }
	 
		public FuncdefmoreparamsContext() { }
		public void copyFrom(FuncdefmoreparamsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FuncdefmoreparamsNotEmptyContext extends FuncdefmoreparamsContext {
		public TerminalNode COMMA() { return getToken(BParser.COMMA, 0); }
		public FuncdefparamContext funcdefparam() {
			return getRuleContext(FuncdefparamContext.class,0);
		}
		public FuncdefmoreparamsContext funcdefmoreparams() {
			return getRuleContext(FuncdefmoreparamsContext.class,0);
		}
		public FuncdefmoreparamsNotEmptyContext(FuncdefmoreparamsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).enterFuncdefmoreparamsNotEmpty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).exitFuncdefmoreparamsNotEmpty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BVisitor ) return ((BVisitor<? extends T>)visitor).visitFuncdefmoreparamsNotEmpty(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FuncdefmoreparamsEmptyContext extends FuncdefmoreparamsContext {
		public FuncdefmoreparamsEmptyContext(FuncdefmoreparamsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).enterFuncdefmoreparamsEmpty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).exitFuncdefmoreparamsEmpty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BVisitor ) return ((BVisitor<? extends T>)visitor).visitFuncdefmoreparamsEmpty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncdefmoreparamsContext funcdefmoreparams() throws RecognitionException {
		FuncdefmoreparamsContext _localctx = new FuncdefmoreparamsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcdefmoreparams);
		try {
			setState(78);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMMA:
				_localctx = new FuncdefmoreparamsNotEmptyContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(73);
				match(COMMA);
				setState(74);
				funcdefparam();
				setState(75);
				funcdefmoreparams();
				}
				break;
			case RPAREN:
				_localctx = new FuncdefmoreparamsEmptyContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncdefparamContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(BParser.ID, 0); }
		public FuncdefparamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcdefparam; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).enterFuncdefparam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).exitFuncdefparam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BVisitor ) return ((BVisitor<? extends T>)visitor).visitFuncdefparam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncdefparamContext funcdefparam() throws RecognitionException {
		FuncdefparamContext _localctx = new FuncdefparamContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_funcdefparam);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			type();
			setState(81);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtsContext extends ParserRuleContext {
		public StmtsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmts; }
	 
		public StmtsContext() { }
		public void copyFrom(StmtsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StmtsNotEmptyContext extends StmtsContext {
		public TerminalNode IF() { return getToken(BParser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(BParser.LPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(BParser.RPAREN, 0); }
		public TerminalNode RETURN() { return getToken(BParser.RETURN, 0); }
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public StmtsContext stmts() {
			return getRuleContext(StmtsContext.class,0);
		}
		public StmtsNotEmptyContext(StmtsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).enterStmtsNotEmpty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).exitStmtsNotEmpty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BVisitor ) return ((BVisitor<? extends T>)visitor).visitStmtsNotEmpty(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StmtsEmptyContext extends StmtsContext {
		public StmtsEmptyContext(StmtsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).enterStmtsEmpty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).exitStmtsEmpty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BVisitor ) return ((BVisitor<? extends T>)visitor).visitStmtsEmpty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtsContext stmts() throws RecognitionException {
		StmtsContext _localctx = new StmtsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_stmts);
		try {
			setState(92);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
				_localctx = new StmtsNotEmptyContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				match(IF);
				setState(84);
				match(LPAREN);
				setState(85);
				expr();
				setState(86);
				match(RPAREN);
				setState(87);
				match(RETURN);
				setState(88);
				stmt();
				setState(89);
				stmts();
				}
				break;
			case RETURN:
				_localctx = new StmtsEmptyContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(BParser.SEMICOLON, 0); }
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).exitStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BVisitor ) return ((BVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			expr();
			setState(95);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LogOrOpContext extends ExprContext {
		public LogexprContext left;
		public Token op;
		public ExprContext right;
		public LogexprContext logexpr() {
			return getRuleContext(LogexprContext.class,0);
		}
		public TerminalNode LOGOR() { return getToken(BParser.LOGOR, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public LogOrOpContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).enterLogOrOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).exitLogOrOp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BVisitor ) return ((BVisitor<? extends T>)visitor).visitLogOrOp(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LogContext extends ExprContext {
		public LogexprContext logexpr() {
			return getRuleContext(LogexprContext.class,0);
		}
		public LogContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).enterLog(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BListener ) ((BListener)listener).exitLog(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BVisitor ) return ((BVisitor<? extends T>)visitor).visitLog(this);
			else return visitor.visitChildren(this);
		}
	}
